# roc-face

./: .gitignore  LICENSE  README.md  TODO.txt  base.py  legacy_chi2.py  main.py  measures.py  models.py  pyproject.toml  requirements.txt  test_rocs.py  utils.py
.github/workflows/: publish-to-test-pypi.yml
example/: example.ipynb  example.py  example_data.json
src/signal_detection/: base.py  measures.py  models.py  utils.py
tests/: context.py  test_roc_fitting.py  test_roc_models.py  test_rocs.py  test_sdt_measures.py
